--- a/crypto.html
+++ b/crypto.html
@@ -5,6 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My AES-256</title>
 
+
+<style>
+    body, html { height: 100%; margin: 0; padding: 0; }
+    .container { display: flex; flex-direction: column; height: 100%; }
+    .top, .bottom { flex: 0 0 15%; resize: none; width: 100%; position: relative; }
+    .middle { flex: 0 0 10%; display: flex; justify-content: center; align-items: center; }
+    .middle button { margin: 0 10px; }
+    .middle button:first-child { margin-left: 0; }
+    .middle button:last-child { margin-right: 0; }
+    .bottom { flex: 0 0 50%; }
+    .middle, .bottom { overflow: hidden; }
+    .container > div { width: 100%; height: 100%; }
+    .container > div > * { width: 100%; height: 100%; box-sizing: border-box; }
+    .title { position: absolute; top: 10px; left: 10px; }
+	
+</style>
+
 <!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -64,6 +81,7 @@
 			var decryptedText = decrypt(g_key, $("#outputText").val());
 			$("#inputText").val(decryptedText);
 			
+			//U2FsdGVkX1/ocHkj6cU5029sF7/mdPJCfS0awuxtvUo=
         });
 	});
 	
@@ -130,21 +148,23 @@
 </head>
 <body>
 
-<h2>AES-256 암호화/복호화 페이지</h2>
+<div class="container">
+	<h2>암호화/복호화 페이지</h2>
+	
+	<a id="btnDecrypt_CopyToClipboard"><p style="text-decoration: underline;">EncryptedText - copy clipboard</p></a>
+	<div class="top">
+		<textarea id="outputText" style="width: 100%; height: 100%;"></textarea>
+	</div>
 
-<div>
-    <a id="btnEncrypt_CopyToClipboard"><p style="text-decoration: underline;">ClearText - copy clipboard</p></a>
-    <textarea id="inputText" style="width:100%;height:150px"></textarea>
-</div>
+	<div class="middle">
+		<button id="btnDecrypt" style="width:45%;height:50px">↓ 복호화 ▼</button>
+		<button id="btnEncrypt" style="width:45%;height:50px">↑ 암호화 ▲</button>
+	</div>
 
-<div>
-    <button id="btnEncrypt" style="width:45%;height:50px">↓ 암호화 ▼</button>
-    <button id="btnDecrypt" style="width:45%;height:50px">↑ 복호화 ▲</button>
-</div>
-
-<div>
-    <a id="btnDecrypt_CopyToClipboard"><p style="text-decoration: underline;">EncryptedText - copy clipboard</p></a>
-    <textarea id="outputText" style="width:100%;height:150px"></textarea>
+	<a id="btnEncrypt_CopyToClipboard"><p style="text-decoration: underline;">ClearText - copy clipboard</p></a>
+	<div class="bottom" style="width: 100%; height: 100%;">
+		<textarea id="inputText" style="width: 100%; height: 100%;"></textarea>
+	</div>
 </div>
 </body>
 </html>
